--- a/index.html
+++ b/index.html
@@ -6,108 +6,54 @@
     <title>HK AI - BRUTAL</title>
     <link href="https://fonts.googleapis.com/css2?family=Unbounded:wght@400;700;900&display=swap" rel="stylesheet">
     <style>
-        * { 
-            box-sizing: border-box; 
-            -webkit-tap-highlight-color: transparent; 
-        }
-        
+        * { box-sizing: border-box; -webkit-tap-highlight-color: transparent; }
         body {
-            margin: 0; padding: 0;
-            background: #000;
-            color: #000;
-            font-family: 'Unbounded', sans-serif; /* Применяем новый шрифт */
-            height: 100vh; display: flex; flex-direction: column; overflow: hidden;
+            margin: 0; padding: 0; background: #000; color: #000;
+            font-family: 'Unbounded', sans-serif; height: 100vh;
+            display: flex; flex-direction: column; overflow: hidden;
         }
-
         #bg-glass {
             position: fixed; top: 0; left: 0; width: 100%; height: 100%;
             z-index: 0; opacity: 0.1; pointer-events: none;
             font-family: monospace; color: #fff; font-size: 10px;
         }
-
-        header {
-            padding: 25px 20px; text-align: center; z-index: 10;
-        }
-        
+        header { padding: 25px 20px; text-align: center; z-index: 10; }
         .logo-box {
-            background: #fff; color: #000;
-            display: inline-block; padding: 12px 35px;
-            border-radius: 12px; font-weight: 900;
-            font-size: 20px; letter-spacing: 1px;
-            text-transform: uppercase;
-            box-shadow: 0 0 20px rgba(255, 255, 255, 0.2);
+            background: #fff; color: #000; display: inline-block; padding: 12px 35px;
+            border-radius: 12px; font-weight: 900; font-size: 20px; letter-spacing: 1px;
+            text-transform: uppercase; box-shadow: 0 0 20px rgba(255, 255, 255, 0.2);
         }
-
         #chat-container {
-            flex: 1; overflow-y: auto;
-            padding: 20px; display: flex; flex-direction: column; gap: 12px;
-            z-index: 1; position: relative;
+            flex: 1; overflow-y: auto; padding: 20px; display: flex;
+            flex-direction: column; gap: 12px; z-index: 1; position: relative;
         }
-
         .message {
-            max-width: 85%; padding: 14px 18px;
-            font-size: 14px; font-weight: 700; /* Жирный шрифт в сообщениях */
-            line-height: 1.3; border-radius: 15px;
-            word-wrap: break-word;
+            max-width: 85%; padding: 14px 18px; font-size: 14px; font-weight: 700;
+            line-height: 1.3; border-radius: 15px; word-wrap: break-word;
             animation: slideUp 0.3s ease;
         }
-
-        @keyframes slideUp {
-            from { opacity: 0; transform: translateY(10px); }
-            to { opacity: 1; transform: translateY(0); }
-        }
-
-        .ai-msg {
-            align-self: flex-start; background: #fff;
-            border-bottom-left-radius: 2px;
-        }
-
-        .user-msg {
-            align-self: flex-end; background: #fff;
-            border-bottom-right-radius: 2px;
-        }
-
-        .footer {
-            padding: 20px; display: flex; gap: 12px;
-            background: #000; z-index: 10;
-        }
-
+        @keyframes slideUp { from { opacity: 0; transform: translateY(10px); } to { opacity: 1; transform: translateY(0); } }
+        .ai-msg { align-self: flex-start; background: #fff; border-bottom-left-radius: 2px; }
+        .user-msg { align-self: flex-end; background: #fff; border-bottom-right-radius: 2px; }
+        .footer { padding: 20px; display: flex; gap: 12px; background: #000; z-index: 10; }
         .input-box {
-            flex: 1; background: #fff; border: none;
-            padding: 18px 20px; border-radius: 15px;
-            font-size: 15px; font-weight: 700; outline: none;
+            flex: 1; background: #fff; border: none; padding: 18px 20px;
+            border-radius: 15px; font-size: 15px; font-weight: 700; outline: none;
             font-family: 'Unbounded', sans-serif;
         }
-
         .send-btn {
-            width: 58px; height: 58px; background: #fff;
-            border-radius: 15px; border: none;
-            display: flex; align-items: center; justify-content: center;
+            width: 58px; height: 58px; background: #fff; border-radius: 15px;
+            border: none; display: flex; align-items: center; justify-content: center;
             cursor: pointer; transition: 0.2s;
         }
-
-        .send-btn:active { transform: scale(0.95); }
-
-        #typing { 
-            color: #fff; font-size: 10px; padding: 0 30px 10px; 
-            display: none; font-weight: 700; letter-spacing: 2px; 
-        }
+        #typing { color: #fff; font-size: 10px; padding: 0 30px 10px; display: none; font-weight: 700; letter-spacing: 2px; }
     </style>
 </head>
 <body>
-
     <div id="bg-glass"></div>
-
-    <header>
-        <div class="logo-box">HK AI</div>
-    </header>
-
-    <div id="chat-container">
-        <div class="message ai-msg">Я HK AI ОТ ЭКОСИСТЕМЫ HAKOS. ЗАДАВАЙ ВОПРОСЫ.</div>
-    </div>
-
+    <header><div class="logo-box">HK AI</div></header>
+    <div id="chat-container"></div>
     <div id="typing">ГЕНЕРАЦИЯ...</div>
-
     <div class="footer">
         <input type="text" id="user-input" class="input-box" placeholder="ТЕКСТ..." autocomplete="off">
         <button id="send-btn" class="send-btn">
@@ -117,7 +63,7 @@
 
     <script type="module">
         import { initializeApp } from "https://www.gstatic.com/firebasejs/10.8.0/firebase-app.js";
-        import { getDatabase, ref, push, onChildAdded } from "https://www.gstatic.com/firebasejs/10.8.0/firebase-database.js";
+        import { getDatabase, ref, push, onChildAdded, remove, onValue } from "https://www.gstatic.com/firebasejs/10.8.0/firebase-database.js";
         import { GoogleGenerativeAI } from "https://esm.run/@google/generative-ai";
 
         const firebaseConfig = {
@@ -135,9 +81,84 @@
         const genAI = new GoogleGenerativeAI("AIzaSyDQfDlE0SlKK8iDXWz_nr-nTF7IC6LeilM");
         const model = genAI.getGenerativeModel({ 
             model: "gemini-1.5-flash",
-            systemInstruction: "Ты — HK AI от HAKOS. Твой стиль: брутальный, лаконичный, черно-белый. Пиши капсом или короткими фразами. Ты знаешь про HKos и майнеры."
+            systemInstruction: "ТЫ — HK AI ОТ HAKOS. ТВОЙ СТИЛЬ: БРУТАЛЬНЫЙ, ЛАКОНИЧНЫЙ. ПИШИ КОРОТКО И КАПСОМ."
         });
 
+        const container = document.getElementById('chat-container');
+        const input = document.getElementById('user-input');
+        const typing = document.getElementById('typing');
+
+        let waitingForConfirm = false;
+
+        async function sendMessage() {
+            const text = input.value.trim();
+            if (!text) return;
+            const upperText = text.toLowerCase();
+
+            // Логика очистки
+            if (upperText === "очисти чат") {
+                addMessage("ВЫ ТОЧНО ХОТИТЕ УДАЛИТЬ ИСТОРИЮ?", "ai");
+                waitingForConfirm = true;
+                input.value = "";
+                return;
+            }
+
+            if (waitingForConfirm) {
+                if (upperText === "да") {
+                    await remove(messagesRef);
+                    container.innerHTML = "";
+                    addMessage("ИСТОРИЯ ОЧИЩЕНА.", "ai");
+                } else {
+                    addMessage("ОТМЕНЕНО.", "ai");
+                }
+                waitingForConfirm = false;
+                input.value = "";
+                return;
+            }
+
+            // Обычная отправка
+            await push(messagesRef, { text, sender: "user", timestamp: Date.now() });
+            input.value = "";
+            typing.style.display = "block";
+
+            try {
+                const result = await model.generateContent(text);
+                const response = await result.response;
+                const aiText = response.text().toUpperCase();
+                await push(messagesRef, { text: aiText, sender: "ai", timestamp: Date.now() });
+            } catch (e) {
+                console.error("Ошибка Gemini:", e);
+                addMessage("ОШИБКА СВЯЗИ С ЯДРОМ.", "ai");
+            } finally {
+                typing.style.display = "none";
+            }
+        }
+
+        function addMessage(text, sender) {
+            const div = document.createElement('div');
+            div.className = `message ${sender === 'user' ? 'user-msg' : 'ai-msg'}`;
+            div.innerText = text;
+            container.appendChild(div);
+            container.scrollTop = container.scrollHeight;
+        }
+
+        document.getElementById('send-btn').addEventListener('click', sendMessage);
+        input.addEventListener('keypress', (e) => { if(e.key === 'Enter') sendMessage(); });
+
+        // Слушаем базу
+        onChildAdded(messagesRef, (snapshot) => {
+            const data = snapshot.val();
+            addMessage(data.text, data.sender);
+        });
+
+        // Если база очищена удаленно
+        onValue(messagesRef, (snapshot) => {
+            if (!snapshot.exists()) {
+                container.innerHTML = "";
+            }
+        });
+
+        // Фон
         const bg = document.getElementById('bg-glass');
         setInterval(() => {
             const span = document.createElement('span');
@@ -148,35 +169,6 @@
             bg.appendChild(span);
             setTimeout(() => span.remove(), 1500);
         }, 150);
-
-        const container = document.getElementById('chat-container');
-        const input = document.getElementById('user-input');
-        const typing = document.getElementById('typing');
-
-        async function sendMessage() {
-            const text = input.value.trim();
-            if (!text) return;
-            await push(messagesRef, { text, sender: "user", timestamp: Date.now() });
-            input.value = "";
-            typing.style.display = "block";
-            try {
-                const result = await model.generateContent(text);
-                await push(messagesRef, { text: result.response.text().toUpperCase(), sender: "ai", timestamp: Date.now() });
-            } catch (e) { console.error(e); }
-            finally { typing.style.display = "none"; }
-        }
-
-        document.getElementById('send-btn').addEventListener('click', sendMessage);
-        input.addEventListener('keypress', (e) => { if(e.key === 'Enter') sendMessage(); });
-
-        onChildAdded(messagesRef, (snapshot) => {
-            const data = snapshot.val();
-            const div = document.createElement('div');
-            div.className = `message ${data.sender === 'user' ? 'user-msg' : 'ai-msg'}`;
-            div.innerText = data.text;
-            container.appendChild(div);
-            container.scrollTop = container.scrollHeight;
-        });
     </script>
 </body>
 </html>
