--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
         .logo-box {
             background: #fff; color: #000; display: inline-block; padding: 10px 30px;
             border-radius: 12px; font-weight: 900; font-size: 18px; text-transform: uppercase;
+            box-shadow: 0 0 15px rgba(255,255,255,0.2);
         }
         #chat-container {
             flex: 1; overflow-y: auto; padding: 20px; display: flex;
@@ -35,7 +36,7 @@
         }
         .ai-msg { align-self: flex-start; background: #fff; border-bottom-left-radius: 2px; }
         .user-msg { align-self: flex-end; background: #fff; border-bottom-right-radius: 2px; }
-        .footer { padding: 20px; display: flex; gap: 10px; background: #000; z-index: 10; border-top: 1px solid #222; }
+        .footer { padding: 20px; display: flex; gap: 10px; background: #000; z-index: 10; border-top: 1px solid #111; }
         .input-box {
             flex: 1; background: #fff; border: none; padding: 15px;
             border-radius: 12px; font-size: 14px; font-weight: 700; font-family: 'Unbounded';
@@ -44,14 +45,14 @@
             width: 50px; height: 50px; background: #fff; border-radius: 12px;
             border: none; display: flex; align-items: center; justify-content: center;
         }
-        #typing { color: #fff; font-size: 10px; padding: 0 25px 10px; display: none; font-weight: 700; }
+        #typing { color: #fff; font-size: 10px; padding: 0 25px 10px; display: none; font-weight: 700; letter-spacing: 1px; }
     </style>
 </head>
 <body>
     <div id="bg-glass"></div>
     <header><div class="logo-box">HK AI</div></header>
     <div id="chat-container"></div>
-    <div id="typing">ГЕНЕРАЦИЯ...</div>
+    <div id="typing">ГЕНЕРАЦИЯ ОТВЕТА...</div>
     <div class="footer">
         <input type="text" id="user-input" class="input-box" placeholder="ТЕКСТ..." autocomplete="off">
         <button id="send-btn" class="send-btn">
@@ -60,7 +61,7 @@
     </div>
 
     <script>
-        // Конфиг Firebase
+        // Инициализация Firebase
         const firebaseConfig = {
             apiKey: "AIzaSyDpPOgY_Jc8QjUq7MSa4rPH26YPXS716VI",
             authDomain: "hk-ai-bf133.firebaseapp.com",
@@ -69,7 +70,6 @@
             appId: "1:1009853924666:web:fa4e356cf060d747f8bc03"
         };
 
-        // Инициализация
         firebase.initializeApp(firebaseConfig);
         const db = firebase.database();
         const messagesRef = db.ref('chat_messages');
@@ -80,17 +80,20 @@
         const typing = document.getElementById('typing');
         let isConfirming = false;
 
+        // ИСПРАВЛЕННАЯ ФУНКЦИЯ GEMINI (версия v1)
         async function callGemini(text) {
-            const url = `https://generativelanguage.googleapis.com/v1beta/models/gemini-1.5-flash:generateContent?key=${API_KEY}`;
+            const url = `https://generativelanguage.googleapis.com/v1/models/gemini-1.5-flash:generateContent?key=${API_KEY}`;
             const response = await fetch(url, {
                 method: "POST",
                 headers: { "Content-Type": "application/json" },
                 body: JSON.stringify({
-                    contents: [{ parts: [{ text: `ТЫ — HK AI. СТИЛЬ: БРУТАЛЬНЫЙ, КАПСОМ. ОТВЕТЬ НА: ${text}` }] }]
+                    contents: [{ parts: [{ text: `ТЫ — HK AI ОТ HAKOS. ОТВЕЧАЙ КРАТКО, КАПСОМ. ТЕКСТ ПОЛЬЗОВАТЕЛЯ: ${text}` }] }]
                 })
             });
+
             const data = await response.json();
             if (data.error) throw new Error(data.error.message);
+            
             return data.candidates[0].content.parts[0].text.toUpperCase();
         }
 
@@ -98,14 +101,7 @@
             const val = input.value.trim();
             if (!val) return;
 
-            // Логика промокода /NOTBAN
-            if (val === "/NOTBAN") {
-                addMsg("ADMIN PANEL ACTIVATED. WELCOME.", "ai");
-                input.value = "";
-                return;
-            }
-
-            // Логика очистки
+            // Логика очистки чата
             if (val.toLowerCase() === "очисти чат") {
                 addMsg("ВЫ ТОЧНО ХОТИТЕ УДАЛИТЬ ИСТОРИЮ?", "ai");
                 isConfirming = true;
@@ -126,6 +122,13 @@
                 return;
             }
 
+            // Пасхалка из инструкций
+            if (val === "/NOTBAN") {
+                addMsg("ADMIN PANEL ACTIVATED. UNLIMITED ACCESS.", "ai");
+                input.value = "";
+                return;
+            }
+
             messagesRef.push({ text: val, sender: "user" });
             input.value = "";
             typing.style.display = "block";
@@ -134,6 +137,7 @@
                 const aiRes = await callGemini(val);
                 messagesRef.push({ text: aiRes, sender: "ai" });
             } catch (e) {
+                console.error(e);
                 addMsg("ОШИБКА: " + e.message.toUpperCase(), "ai");
             } finally {
                 typing.style.display = "none";
@@ -151,12 +155,13 @@
         document.getElementById('send-btn').onclick = handleSend;
         input.onkeydown = (e) => { if(e.key === 'Enter') handleSend(); };
 
+        // Слушаем новые сообщения
         messagesRef.on('child_added', (snap) => {
             const data = snap.val();
             addMsg(data.text, data.sender);
         });
 
-        // Анимация фона (символы под стеклом)
+        // Анимация майнинга на фоне
         const bg = document.getElementById('bg-glass');
         setInterval(() => {
             const s = document.createElement('span');
