--- a/index.html
+++ b/index.html
@@ -3,114 +3,100 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>HK AI - CORE</title>
+    <title>HK AI</title>
     <link href="https://fonts.googleapis.com/css2?family=Unbounded:wght@700;900&display=swap" rel="stylesheet">
     <style>
         * { box-sizing: border-box; -webkit-tap-highlight-color: transparent; outline: none; }
         body { margin: 0; background: #000; color: #fff; font-family: 'Unbounded', sans-serif; height: 100vh; display: flex; flex-direction: column; overflow: hidden; }
         #bg-glass { position: fixed; top: 0; left: 0; width: 100%; height: 100%; z-index: 0; opacity: 0.1; pointer-events: none; }
-        header { padding: 20px; text-align: center; z-index: 10; border-bottom: 1px solid #111; }
-        .logo { background: #fff; color: #000; display: inline-block; padding: 10px 25px; border-radius: 8px; font-weight: 900; font-size: 16px; text-transform: uppercase; }
-        #chat { flex: 1; overflow-y: auto; padding: 20px; display: flex; flex-direction: column; gap: 15px; z-index: 1; }
-        .m { max-width: 85%; padding: 14px; border-radius: 15px; font-size: 14px; font-weight: 700; line-height: 1.3; }
+        header { padding: 25px; text-align: center; z-index: 10; }
+        .logo-box { background: #fff; color: #000; display: inline-block; padding: 10px 30px; border-radius: 12px; font-weight: 900; font-size: 18px; text-transform: uppercase; }
+        #chat { flex: 1; overflow-y: auto; padding: 20px; display: flex; flex-direction: column; gap: 12px; z-index: 1; }
+        .m { max-width: 85%; padding: 14px 18px; font-size: 14px; font-weight: 700; line-height: 1.3; border-radius: 15px; word-wrap: break-word; }
         .ai { align-self: flex-start; background: #fff; color: #000; border-bottom-left-radius: 2px; }
         .user { align-self: flex-end; background: #222; color: #fff; border-bottom-right-radius: 2px; }
-        .f { padding: 20px; background: #000; display: flex; gap: 10px; border-top: 1px solid #111; z-index: 10; }
-        input { flex: 1; background: #111; border: 1px solid #333; padding: 15px; border-radius: 12px; font-family: 'Unbounded'; color: #fff; font-weight: 700; }
-        button { background: #fff; border: none; border-radius: 12px; padding: 0 20px; font-weight: 900; cursor: pointer; }
-        #status { font-size: 10px; color: #444; text-align: center; padding-bottom: 10px; font-weight: 700; }
+        .footer { padding: 20px; background: #000; z-index: 10; display: flex; gap: 10px; border-top: 1px solid #111; }
+        input { flex: 1; background: #fff; border: none; padding: 15px; border-radius: 12px; font-size: 14px; font-weight: 700; font-family: 'Unbounded'; color: #000; }
+        .send-btn { width: 50px; height: 50px; background: #fff; border-radius: 12px; border: none; display: flex; align-items: center; justify-content: center; cursor: pointer; }
+        #status { color: #444; font-size: 10px; text-align: center; padding-bottom: 5px; font-weight: 700; display: none; }
     </style>
 </head>
 <body>
     <div id="bg-glass"></div>
-    <header><div class="logo">HK AI System</div></header>
+    <header><div class="logo-box">HK AI</div></header>
     <div id="chat"></div>
-    <div id="status">СИСТЕМА: ГОТОВА</div>
-    <div class="f">
-        <input type="text" id="msg-input" placeholder="ВВОД..." autocomplete="off">
-        <button onclick="sendMsg()">OK</button>
+    <div id="status">ГЕНЕРАЦИЯ...</div>
+    <div class="footer">
+        <input type="text" id="in" placeholder="ТЕКСТ..." autocomplete="off">
+        <button class="send-btn" onclick="send()">
+            <svg viewBox="0 0 24 24" width="24" height="24"><path fill="black" d="M2.01 21L23 12 2.01 3 2 10l15 2-15 2z"></path></svg>
+        </button>
     </div>
 
     <script>
         const API_KEY = "AIzaSyDtzX7qbF0C1KjhfShopGLctIbGLiO_Z6w";
 
-        async function sendMsg() {
-            const input = document.getElementById('msg-input');
+        async function send() {
+            const input = document.getElementById('in');
             const val = input.value.trim();
             if (!val) return;
 
             addMsg(val, 'user');
             input.value = '';
-            document.getElementById('status').innerText = "ГЕНЕРАЦИЯ ОТВЕТА...";
+            const status = document.getElementById('status');
+            status.style.display = "block";
 
             try {
-                // ИСПОЛЬЗУЕМ КРОСС-ДОМЕННЫЙ ПРОКСИ ДЛЯ ОБХОДА БЛОКИРОВОК TELEGRAM
-                const targetUrl = `https://generativelanguage.googleapis.com/v1beta/models/gemini-1.5-flash:generateContent?key=${API_KEY}`;
+                // Самый чистый метод запроса v1beta
+                const url = `https://generativelanguage.googleapis.com/v1beta/models/gemini-1.5-flash:generateContent?key=${API_KEY}`;
                 
-                // Это заставит запрос выглядеть как обычный переход по ссылке
-                const proxyUrl = "https://api.allorigins.win/get?url=" + encodeURIComponent(targetUrl);
-
-                const response = await fetch(proxyUrl, {
+                const response = await fetch(url, {
                     method: 'POST',
                     headers: { 'Content-Type': 'application/json' },
                     body: JSON.stringify({
-                        contents: [{ parts: [{ text: "ОТВЕТЬ КОРОТКО И КАПСОМ: " + val }] }]
+                        contents: [{ parts: [{ text: "ОТВЕТЬ КРАТКО И КАПСОМ: " + val }] }]
                     })
                 });
 
-                // Если AllOrigins не пропустил POST, пробуем ПРЯМОЙ запрос с заголовками "невидимками"
-                if (!response.ok) {
-                    throw new Error("PROXY ERROR");
-                }
-
                 const data = await response.json();
-                // Распаковываем данные из прокси
-                const geminiData = JSON.parse(data.contents);
-                
-                if (geminiData.candidates && geminiData.candidates[0].content) {
-                    const aiText = geminiData.candidates[0].content.parts[0].text.toUpperCase();
-                    addMsg(aiText, 'ai');
-                } else {
-                    throw new Error("EMPTY DATA");
+
+                if (data.error) {
+                    throw new Error(data.error.message);
                 }
 
-            } catch (e) {
-                // Если прокси не сработал, пробуем прямой запрос (последний шанс)
-                try {
-                    const directRes = await fetch(`https://generativelanguage.googleapis.com/v1beta/models/gemini-1.5-flash:generateContent?key=${API_KEY}`, {
-                        method: "POST",
-                        headers: { "Content-Type": "application/json" },
-                        body: JSON.stringify({ contents: [{ parts: [{ text: val }] }] })
-                    });
-                    const dData = await directRes.json();
-                    addMsg(dData.candidates[0].content.parts[0].text.toUpperCase(), 'ai');
-                } catch (err) {
-                    addMsg("ОШИБКА ДОСТУПА. ПРОВЕРЬ VPN ЕЩЕ РАЗ!", "ai");
+                if (data.candidates && data.candidates[0].content) {
+                    const txt = data.candidates[0].content.parts[0].text.toUpperCase();
+                    addMsg(txt, 'ai');
+                } else {
+                    addMsg("СИСТЕМА ПЕРЕГРУЖЕНА", "ai");
                 }
+            } catch (e) {
+                console.error(e);
+                addMsg("ОШИБКА ДОСТУПА. ПРОВЕРЬ VPN!", "ai");
             } finally {
-                document.getElementById('status').innerText = "СИСТЕМА: ОЖИДАНИЕ";
+                status.style.display = "none";
             }
         }
 
-        function addMsg(text, type) {
-            const div = document.createElement('div');
-            div.className = `m ${type}`;
-            div.innerText = text;
+        function addMsg(t, s) {
+            const d = document.createElement('div');
+            d.className = `m ${s}`;
+            d.innerText = t;
             const chat = document.getElementById('chat');
-            chat.appendChild(div);
+            chat.appendChild(d);
             chat.scrollTop = chat.scrollHeight;
         }
 
-        document.getElementById('msg-input').onkeydown = (e) => { if(e.key === 'Enter') sendMsg(); };
+        document.getElementById('in').onkeydown = (e) => { if(e.key === 'Enter') send(); };
 
-        // Символы майнинга на фоне
+        // Фоновый эффект (под стеклом)
         setInterval(() => {
             const s = document.createElement('span');
-            s.innerText = "01$#"[Math.floor(Math.random()*4)];
-            s.style.cssText = `position:absolute;left:${Math.random()*100}%;top:${Math.random()*100}%;color:rgba(255,255,255,0.1);font-size:10px;`;
+            s.innerText = "·";
+            s.style.cssText = `position:absolute;left:${Math.random()*100}%;top:${Math.random()*100}%;color:#fff;font-size:12px;`;
             document.getElementById('bg-glass').appendChild(s);
-            setTimeout(() => s.remove(), 1500);
-        }, 300);
+            setTimeout(() => s.remove(), 2000);
+        }, 500);
     </script>
 </body>
-</html>
+    </html>
